--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,35 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+
 body {
-    background-color: aquamarine;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+main {
+    position: relative;
+    height: 100vh;    
+}
+
+section#telefone {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 506px;
+    width: 252px;
+    
+    background: url(../imagens/frame-iphone1.png) no-repeat;
 }
