--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,6 +16,7 @@ body {
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 main {
@@ -32,4 +33,12 @@ section#telefone {
     width: 252px;
     
     background: url(../imagens/frame-iphone1.png) no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 64px;
+    left: 17px;
+    height: 379px;
+    width: 216px;
 }
