--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@ body {
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
-    background-size: cover;
+    
 }
 
 main {
@@ -41,4 +41,9 @@ iframe#tela {
     left: 17px;
     height: 379px;
     width: 216px;
+}
+
+section#portfolio img {
+    width: 50px;
+    height: 50px;
 }
